--- a/src/scss/inst.scss
+++ b/src/scss/inst.scss
@@ -2,7 +2,7 @@
 
 .inst {
   min-width: 290px;
-  padding: 0 15px;
+  @include container();
 }
 
 .inst__title {
@@ -18,8 +18,14 @@
 .inst__gallery {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3, auto);
   margin: 46px 0 70px 0;
   gap: 15px;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, auto);
+  }
 }
 
 .inst__img {
@@ -42,5 +48,28 @@
   &--5 {
     grid-column: 2;
     grid-row: 3;
+  }
+
+  @media (min-width: $tablet-width) {
+    &--1 {
+      grid-column: 1;
+      grid-row: 1;
+    }
+    &--2 {
+      grid-column: 1;
+      grid-row: 2;
+    }
+    &--3 {
+      grid-column: 3;
+      grid-row: 2;
+    }
+    &--4 {
+      grid-column: 2;
+      grid-row: span 2;
+    }
+    &--5 {
+      grid-column: 3;
+      grid-row: 1;
+    }
   }
 }
