--- a/src/scss/new.scss
+++ b/src/scss/new.scss
@@ -1,8 +1,14 @@
 @import "variables";
+@import "mixins";
 
 .new {
+  @include container();
   min-width: 290px;
   margin: 70px 15px;
+
+  @media (min-width: $tablet-width) {
+    margin: 80px 45px;
+  }
 }
 
 .new__title {
