--- a/src/scss/sub.scss
+++ b/src/scss/sub.scss
@@ -40,7 +40,7 @@
   font-size: 14px;
   line-height: 21px;
   color: $white;
-  padding: 15px 130px 15px 0;  
+  padding: 15px 100px 15px 0;  
 }
 
 .sub__btn {
@@ -54,6 +54,13 @@
   line-height: 20px;
   color: $white;
   bottom: 65px;
-  right: 50px;
+  right: 10px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.sub__btn-icon {
+  color: $white;
 }
